--- a/dev_android_crie_18_apps/Pedrapapeloutesoura/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/Pedrapapeloutesoura/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
+        android:onClick="selecionarTesoura"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent"
@@ -63,6 +64,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="selecionarPapel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textResultado"
@@ -77,6 +79,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:onClick="selecionarPedra"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
