--- a/dev_android_crie_18_apps/Layout/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/Layout/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_material_light"
     tools:context=".MainActivity">
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CheckBox"
+        tools:layout_editor_absoluteX="157dp"
+        tools:layout_editor_absoluteY="105dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,23 +23,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_salvar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/cor_botao_salvar"
-        android:text="@string/botao_salvar"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="112dp" />
-
-    <Button
-        android:id="@+id/button_salvar2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/cor_botao_salvar"
-        android:text="@string/botao_salvar"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="411dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
