--- a/dev_android_crie_18_apps/Layout/app/src/main/res/values/colors.xml
+++ b/dev_android_crie_18_apps/Layout/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFFFC107</color>
+    <color name="colorPrimaryDark">#FFCF8914</color>
+    <color name="colorAccent">#FFFFE57F</color>
     <color name="cor_botao_salvar">#80FFEE</color>
+    <color name="background_material_light">#787878</color>
 </resources>
