--- a/dev_android_crie_18_apps/RecyclerView/app/src/main/res/layout/adapter_lista.xml
+++ b/dev_android_crie_18_apps/RecyclerView/app/src/main/res/layout/adapter_lista.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textTitulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -20,15 +20,16 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textAno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Ano" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textGenero"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Genero" />
