--- a/dev_android_crie_18_apps/CardView/app/src/main/res/layout/postagem_detalhe.xml
+++ b/dev_android_crie_18_apps/CardView/app/src/main/res/layout/postagem_detalhe.xml
@@ -38,7 +38,7 @@
                 android:layout_height="200dp"
                 android:layout_marginTop="10dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/imagem1" />
+                app:srcCompat="@mipmap/imagem1" />
 
             <TextView
                 android:id="@+id/textPostagem"
