Finalizando #App6 Cara ou Coroa

--- a/dev_android_crie_18_apps/CaraouCoroa/app/src/main/res/layout/activity_resultado.xml
+++ b/dev_android_crie_18_apps/CaraouCoroa/app/src/main/res/layout/activity_resultado.xml
@@ -7,7 +7,7 @@
     tools:context=".ResultadoActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -15,14 +15,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageResultado" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageResultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonVoltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
