--- a/dev_android_crie_18_apps/NavigationDrawer/app/src/main/res/menu/activity_main_drawer.xml
+++ b/dev_android_crie_18_apps/NavigationDrawer/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_empresa"
+            android:icon="@drawable/ic_empresa_preto_24dp"
+            android:title="@string/menu_empresa" />
+        <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
