--- a/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/navigation/mobile_navigation.xml
+++ b/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,36 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_principal">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.atmconsultoria.ui.home.HomeFragment"
+        android:id="@+id/nav_principal"
+        android:name="com.example.atmconsultoria.ui.principal.PrincipalFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_principal" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.atmconsultoria.ui.gallery.GalleryFragment"
+        android:id="@+id/nav_servicos"
+        android:name="com.example.atmconsultoria.ui.servicos.ServicosFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_servicos" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.atmconsultoria.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_clientes"
+        android:name="com.example.atmconsultoria.ui.clientes.ClientesFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_clientes" />
 
 
     <fragment
-        android:id="@+id/nav_share"
-        android:name="com.example.atmconsultoria.ui.share.ShareFragment"
+        android:id="@+id/nav_contato"
+        android:name="com.example.atmconsultoria.ui.contato.ContatoFragment"
         android:label="@string/menu_share"
-        tools:layout="@layout/fragment_share" />
+        tools:layout="@layout/fragment_contato" />
 
     <fragment
-        android:id="@+id/nav_send"
-        android:name="com.example.atmconsultoria.ui.send.SendFragment"
+        android:id="@+id/nav_sobre"
+        android:name="com.example.atmconsultoria.ui.sobre.SobreFragment"
         android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
+        tools:layout="@layout/fragment_sobre" />
 </navigation>
