--- a/dev_android_crie_18_apps/MediaPlayer/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/MediaPlayer/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/pause"
+        android:onClick="pausarSom"
         app:layout_constraintEnd_toStartOf="@+id/buttonStop"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonPlay"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@drawable/stop"
+        android:onClick="pararSom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonPause"
