--- a/dev_android_crie_18_apps/ExecutandoVdeos/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/ExecutandoVdeos/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:id="@+id/imageExecutar"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:onClick="abrirVideo"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView"
