--- a/dev_android_crie_18_apps/Abas/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/Abas/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
     app:stl_indicatorInFront="false"
     app:stl_indicatorInterpolation="smart"
     app:stl_indicatorGravity="bottom"
-    app:stl_indicatorColor="#40C4FF"
+    app:stl_indicatorColor="@android:color/white"
     app:stl_indicatorThickness="4dp"
     app:stl_indicatorWidth="auto"
     app:stl_indicatorCornerRadius="2dp"
@@ -25,14 +25,14 @@
     app:stl_underlineColor="#4D000000"
     app:stl_underlineThickness="1dp"
     app:stl_dividerColor="#4D000000"
-    app:stl_dividerThickness="1dp"
-    app:stl_defaultTabBackground="@color/colorPrimary"
+    app:stl_dividerThickness="0dp"
+    android:background="@color/colorPrimary"
     app:stl_defaultTabTextAllCaps="true"
-    app:stl_defaultTabTextColor="#FC000000"
+    app:stl_defaultTabTextColor="@android:color/white"
     app:stl_defaultTabTextSize="12sp"
     app:stl_defaultTabTextHorizontalPadding="16dp"
     app:stl_defaultTabTextMinWidth="0dp"
-    app:stl_distributeEvenly="false"
+    app:stl_distributeEvenly="true"
     app:stl_clickable="true"
     app:stl_titleOffset="24dp"
     app:stl_drawDecorationAfterTab="false"
