--- a/dev_android_crie_18_apps/AprendaIngles/app/src/main/res/layout/fragment_numeros.xml
+++ b/dev_android_crie_18_apps/AprendaIngles/app/src/main/res/layout/fragment_numeros.xml
@@ -22,7 +22,7 @@
         app:layout_constraintGuide_percent="0.87" />
 
     <ImageButton
-        android:id="@+id/imageButton7"
+        android:id="@+id/buttonUm"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="32dp"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton8"
+        android:id="@+id/buttonDois"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="32dp"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton9"
+        android:id="@+id/buttonTres"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="24dp"
@@ -52,10 +52,10 @@
         android:scaleType="centerCrop"
         android:src="@drawable/tres"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonUm" />
 
     <ImageButton
-        android:id="@+id/imageButton10"
+        android:id="@+id/buttonQuatro"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="24dp"
@@ -63,10 +63,10 @@
         android:scaleType="centerCrop"
         android:src="@drawable/quatro"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDois" />
 
     <ImageButton
-        android:id="@+id/imageButton11"
+        android:id="@+id/buttonCinco"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="24dp"
@@ -74,10 +74,10 @@
         android:scaleType="centerCrop"
         android:src="@drawable/cinco"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonTres" />
 
     <ImageButton
-        android:id="@+id/imageButton12"
+        android:id="@+id/buttonSeis"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginTop="24dp"
@@ -85,5 +85,5 @@
         android:scaleType="centerCrop"
         android:src="@drawable/seis"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonQuatro" />
 </androidx.constraintlayout.widget.ConstraintLayout>
