Salvando tarefas - Parte 02

--- a/dev_android_crie_18_apps/Listadetarefas/app/src/main/res/layout/activity_adicionar_tarefa.xml
+++ b/dev_android_crie_18_apps/Listadetarefas/app/src/main/res/layout/activity_adicionar_tarefa.xml
@@ -15,14 +15,14 @@
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textInputEditText"
+        app:layout_constraintBottom_toBottomOf="@+id/editTarefa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/editTarefa"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
