Storage - Deletando e baixando imagem

--- a/dev_android_crie_18_apps/FirebaseApp/app/src/main/res/layout/activity_main.xml
+++ b/dev_android_crie_18_apps/FirebaseApp/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/celular" />
+        app:srcCompat="@drawable/padrao" />
 
     <Button
         android:id="@+id/buttonUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="318dp"
-        android:text="upload imagem"
+        android:text="Carregar Imagem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
